# cppEngine

./: CMakeLists.txt  README.md
include/crystallized/: Crystallized.h
include/crystallized/exception/: CrystallizedException.h
include/crystallized/logging/: EngineLogger.h
src/: Crystallized.cpp
src/logging/: EngineLogger.cpp
test/: CMakeLists.txt
test/src/: main.cpp
